tests/compile-fail/bad_timeout_unit.stderr
error: unknown unit: 'x'
       valid units: s, ms, m
       help: use `timeout = "30s"` or `timeout = "500ms"`
  --> tests/compile-fail/bad_timeout_unit.rs:11:19
   |
11 | #[assay(timeout = "30x")]
   |                   ^^^^^
